fixed google fonts to not specify http, fixed unnecessary scrollbar in embedded view

--- a/assets/css/themes/default.css
+++ b/assets/css/themes/default.css
@@ -3270,6 +3270,7 @@ a
 .embedded
 {
 	background: #9c9c9c;
+	height: auto;
 }
 
 #embedded-dialog
